72: small fix with z-index in kss scss

--- a/kss/builder/decanter/kss-assets/css/kss.css
+++ b/kss/builder/decanter/kss-assets/css/kss.css
@@ -1562,23 +1562,20 @@ body {
     .main-nav li:last-child > a {
       margin: 0; }
 
-#kssref-components-main-navigation .kss-modifier__example:nth-child(3) nav {
-  z-index: 9699; }
-
 #kssref-components-main-navigation .kss-modifier__example:nth-child(6) nav {
-  z-index: 9399; }
+  z-index: 9899; }
 
 #kssref-components-main-navigation .kss-modifier__example:nth-child(9) nav {
-  z-index: 9099; }
+  z-index: 9799; }
 
 #kssref-components-main-navigation .kss-modifier__example:nth-child(12) nav {
-  z-index: 8799; }
+  z-index: 9699; }
 
 #kssref-components-main-navigation .kss-modifier__example:nth-child(15) nav {
-  z-index: 8499; }
+  z-index: 9599; }
 
 #kssref-components-main-navigation .kss-modifier__example:nth-child(18) nav {
-  z-index: 8199; }
+  z-index: 9499; }
 
 .kss-markup {
   overflow: scroll;
